--- a/front_end_pc/login.html
+++ b/front_end_pc/login.html
@@ -5,13 +5,13 @@
 	<title>美多商城-登录</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<script type="text/javascript" src="/js/vue-2.5.16.js"></script>
-    <script type="text/javascript" src="/js/axios-0.18.0.min.js"></script>
-    <script type="text/javascript" src="/js/host.js"></script>
+	<script type="text/javascript" src="js/vue-2.5.16.js"></script>
+    <script type="text/javascript" src="js/axios-0.18.0.min.js"></script>
+    <script type="text/javascript" src="js/host.js"></script>
 </head>
 <body>
 	<div class="login_top clearfix">
-		<a href="index.html" class="login_logo"><img src="images/logo02.png"></a>	
+		<a href="index.html" class="login_logo"><img src="images/logo02.png"></a>
 	</div>
 	<div class="login_form_bg">
 		<div class="login_form_wrap clearfix">
@@ -31,7 +31,7 @@
                         <div class="more_input clearfix">
                             <input type="checkbox" v-model="remember">
                             <label>记住登录</label>
-                            <a href="/find_password.html">忘记密码</a>
+                            <a href="find_password.html">忘记密码</a>
                         </div>
                         <input type="submit" name="" value="登 录" class="input_submit">
                     </form>
@@ -40,7 +40,7 @@
 				<div class="third_party">
 					<a @click="qq_login" class="qq_login">QQ</a>
 					<a href="#" class="weixin_login">微信</a>
-					<a href="/register.html" class="register_btn">立即注册</a>
+					<a href="register.html" class="register_btn">立即注册</a>
 				</div>
 
 			</div>
@@ -55,11 +55,11 @@
 			<span>|</span>
 			<a href="#">招聘人才</a>
 			<span>|</span>
-			<a href="#">友情链接</a>		
+			<a href="#">友情链接</a>
 		</div>
 		<p>CopyRight © 2016 北京美多商业股份有限公司 All Rights Reserved</p>
 		<p>电话：010-****888    京ICP备*******8号</p>
 	</div>
-	<script type="text/javascript" src="/js/login.js"></script>
+	<script type="text/javascript" src="js/login.js"></script>
 </body>
 </html>
